cluster/apps/tools/octoprint/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: tools
  name: octoprint
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_TARGET_SKY}"
spec:
  tls:
    - secretName: print-tls
      hosts:
        - print.${SECRET_DOMAIN_ME}
  rules:
    - host: print.${SECRET_DOMAIN_ME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: octoprint
                port:
                  number: 80
